demo/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedpage-deployment
  namespace: feed
  labels:
    app: feed
spec:
  revisionHistoryLimit: 1
  replicas: 1 # pods running the service
  selector:
    matchLabels:
      app: feed
  template:
    metadata:
      labels:
        app: feed
      annotations:
        sidecar.istio.io/proxyCPU: "50m"
        sidecar.istio.io/proxyMemory: "64Mi"
        sidecar.istio.io/proxyCPULimit: "200m"
        sidecar.istio.io/proxyMemoryLimit: "128Mi"
    spec:
      imagePullSecrets:
        - name: ncr-regcred
      containers:
        - name: feedpage-service
          image: iteamoa.kr.ncr.ntruss.com/feed:6f587b6
          ports:
            - containerPort: 80 # Check container's exposed port
