demo/k8s/feed-page-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedpage
  namespace: feedpage-namespace  # Match the Fargate namespace
  labels:
    svc: feedpage
spec:
  replicas: 1  # pods running the service
  selector:
    matchLabels:
      svc: feedpage
  template:
    metadata:
      labels:
        svc: feedpage
    spec:
      imagePullSecrets: 
        - name: ecr-secret
      containers:
      - name: feedpage-service
        image: 970547342771.dkr.ecr.ap-northeast-2.amazonaws.com/iteamoa/feedpage:latest
        ports:
        - containerPort: 8080  # Check container's exposed port
