demo/k8s/feed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedpage-svc
  namespace: feedpage-namespace
  labels:
    app: feedpage
spec:
  selector:
    app: feedpage
  ports:
    - protocol: TCP
      port: 80            # Public-facing port/Service port
      targetPort: 8080       # Container port
  type: ClusterIP            # Exposes the service
