demo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feed-service
  namespace: feed
  labels:
    app: feed
spec:
  selector:
    app: feed
  ports:
    - protocol: TCP
      port: 80            # Public-facing port/Service port
      targetPort: 80       # Container port
  type: ClusterIP            # Exposes the service
